--- a/src/components/Title/__stories__/Title.stories.mdx
+++ b/src/components/Title/__stories__/Title.stories.mdx
@@ -2,23 +2,22 @@ import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator, Tip, AlphaWarning } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import { createComponentTemplate } from "vibe-storybook-components";
-import Heading from "../Title";
+import Title from "../Title";
 import { OVERFLOW_TITLE_CONTAINER_ID, ONE_LINE_ELLIPSIS_TEST_ID } from "../__tests__/title-tests-constants";
 import styles from "./Title.stories.module.scss";
 import { titleOverflowSuite } from "../__tests__/Title.interactions";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
-  component: Heading,
-  enumPropNamesArray: ["types", "weights", "colors", { propName: "align", enumName: "align" }], // List enum props here
+  component: Title,
   iconPropNamesArray: [], // List props that are typed as icons here
   actionPropsArray: [] // List the component's actions here
 });
 
-<Meta title="Text/Title" component={Heading} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
+<Meta title="Text/Title" component={Title} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
-export const textTemplate = createComponentTemplate(Heading);
+export const textTemplate = createComponentTemplate(Title);
 
 # Title
 
@@ -67,33 +66,33 @@ Title components are used to title any page sections or sub-sections in top-leve
       justify={Flex.justify.START}
       align={Flex.align.START}
     >
-      <Heading type={Heading.types.H1} weight={Heading.weights.BOLD}>
+      <Title type={Title.types.H1} weight={Title.weights.BOLD}>
         Bold H1 title
-      </Heading>
-      <Heading type={Heading.types.H1} weight={Heading.weights.NORMAL}>
+      </Title>
+      <Title type={Title.types.H1} weight="normal">
         Normal H1 title
-      </Heading>
-      <Heading type={Heading.types.H1} weight={Heading.weights.LIGHT}>
+      </Title>
+      <Title type={Title.types.H1} weight={Title.weights.LIGHT}>
         Light H1 title
-      </Heading>
-      <Heading type={Heading.types.H2} weight={Heading.weights.BOLD}>
+      </Title>
+      <Title type={Title.types.H2} weight={Title.weights.BOLD}>
         Bold H2 title
-      </Heading>
-      <Heading type={Heading.types.H2} weight={Heading.weights.NORMAL}>
+      </Title>
+      <Title type={Title.types.H2} weight={Title.weights.NORMAL}>
         Normal H2 title
-      </Heading>
-      <Heading type={Heading.types.H2} weight={Heading.weights.LIGHT}>
+      </Title>
+      <Title type={Title.types.H2} weight={Title.weights.LIGHT}>
         Light H2 title
-      </Heading>
-      <Heading type={Heading.types.H3} weight={Heading.weights.BOLD}>
+      </Title>
+      <Title type={Title.types.H3} weight={Title.weights.BOLD}>
         Bold H3 title
-      </Heading>
-      <Heading type={Heading.types.H3} weight={Heading.weights.NORMAL}>
+      </Title>
+      <Title type={Title.types.H3} weight={Title.weights.NORMAL}>
         Normal H3 title
-      </Heading>
-      <Heading type={Heading.types.H3} weight={Heading.weights.LIGHT}>
+      </Title>
+      <Title type={Title.types.H3} weight={Title.weights.LIGHT}>
         Light H3 title
-      </Heading>
+      </Title>
     </Flex>
   </Story>
 </Canvas>
@@ -103,24 +102,24 @@ Title components are used to title any page sections or sub-sections in top-leve
 <Canvas>
   <Story name="Colors">
     <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
-      <Heading color={Heading.colors.PRIMARY}>Primary title</Heading>
-      <Heading color={Heading.colors.SECONDARY}>Secondary title</Heading>
-      <Heading
+      <Title color={Title.colors.PRIMARY}>Primary title</Title>
+      <Title color={Title.colors.SECONDARY}>Secondary title</Title>
+      <Title
         element="div"
         className={styles.primaryBackground}
-        align={Heading.align.CENTER}
-        color={Heading.colors.ON_PRIMARY}
+        align={Title.align.CENTER}
+        color={Title.colors.ON_PRIMARY}
       >
         On primary title
-      </Heading>
-      <Heading
+      </Title>
+      <Title
         element="div"
         className={styles.invertedBackground}
-        align={Heading.align.CENTER}
-        color={Heading.colors.ON_INVERTED}
+        align={Title.align.CENTER}
+        color={Title.colors.ON_INVERTED}
       >
         On inverted title
-      </Heading>
+      </Title>
     </Flex>
   </Story>
 </Canvas>
@@ -139,11 +138,11 @@ When the text is too long and the component includes an ellipsis flag, we will c
       align={Flex.align.STRETCH}
       style={{ width: "70%" }}
     >
-      <Heading ellipsis={false}>
+      <Title ellipsis={false}>
         Title without overflow title without overflow title without overflow title without overflow title without
         overflow title without overflow title without overflow
-      </Heading>
-      <Heading
+      </Title>
+      <Title
         ellipsis
         /**for testing purposes**/
         data-testid={ONE_LINE_ELLIPSIS_TEST_ID}
@@ -153,13 +152,13 @@ When the text is too long and the component includes an ellipsis flag, we will c
       >
         Title with overflow title with overflow title with overflow title with overflow title with overflow title with
         overflow title with overflow title with overflow title with overflow title with overflow
-      </Heading>
+      </Title>
       <div>
-        <Heading ellipsis withoutTooltip maxLines={2}>
+        <Title ellipsis withoutTooltip maxLines={2}>
           Title with overflow title with overflow title with overflow title with overflow title with overflow title with
           overflow title with overflow title with overflow title with overflow title with overflow title with overflow
           title with overflow title with overflow title with overflow title with overflow title with overflow
-        </Heading>
+        </Title>
       </div>
     </Flex>
   </Story>
