ListItem component type

--- a/src/components/ListItem/__stories__/ListItem.stories.mdx
+++ b/src/components/ListItem/__stories__/ListItem.stories.mdx
@@ -9,7 +9,7 @@ import { person1 } from "../../Avatar/__stories__/assets";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: ListItem,
-  enumPropNamesArray: ["size"]
+  enumPropNamesArray: ["size", "component"]
 });
 
 <Meta
