docs(Menu): update story ArgsTable

--- a/src/components/Menu/Menu/__stories__/Menu.stories.mdx
+++ b/src/components/Menu/Menu/__stories__/Menu.stories.mdx
@@ -47,7 +47,7 @@ A menu is a navigatable contextual list of items that can be selected.
 
 ## Props
 
-<ArgsTable of={Menu} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
