Hebrew test story - for demo

--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -186,4 +186,13 @@ Otherwise, use this Text component with a link skin, as demonstrated in the foll
   </Story>
 </Canvas>
 
+### Hebrew test
+<Canvas>
+  <Story name="Hebrew test">
+    <Text>
+      זו דוגמה לטקסט בעברית
+    </Text>
+  </Story>
+</Canvas>
+
 ## Related components
