docs(SplitButton): typo in docs

--- a/src/components/SplitButton/__stories__/splitButton.stories.mdx
+++ b/src/components/SplitButton/__stories__/splitButton.stories.mdx
@@ -251,7 +251,7 @@ The split button has supports multiple sizes: small, medium and large.
       positive: {
         component: (
           <SplitButton
-            children="New Item"
+            children="New item"
             secondaryDialogContent={() =>
               SplitButtonExampleDialog({ options: [{ text: "New group" }, { text: "New board" }] })
             }
@@ -262,7 +262,7 @@ The split button has supports multiple sizes: small, medium and large.
       negative: {
         component: (
           <SplitButton
-            children="New Item"
+            children="New item"
             secondaryDialogContent={() => SplitButtonExampleDialog({ options: [{ text: "New group" }] })}
           />
         ),
@@ -278,7 +278,7 @@ The split button has supports multiple sizes: small, medium and large.
       positive: {
         component: (
           <SplitButton
-            children="New Item"
+            children="New item"
             secondaryDialogContent={() =>
               SplitButtonExampleDialog({
                 options: [
@@ -295,7 +295,7 @@ The split button has supports multiple sizes: small, medium and large.
       negative: {
         component: (
           <SplitButton
-            children="New Item"
+            children="New item"
             secondaryDialogContent={() =>
               SplitButtonExampleDialog({
                 options: [
