--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -96,7 +96,7 @@ The text component serves as a wrapper for applying typography styles to the tex
   <Story name="Colors">
     <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
       <Text color={Text.colors.PRIMARY}>Primary text</Text>
-      <Text color={Text.colors.SECONDARY}>>Secondary text</Text>
+      <Text color={Text.colors.SECONDARY}>Secondary text</Text>
       <Text element="div" className={styles.primaryBackground} align={Text.align.CENTER} color={Text.colors.ON_PRIMARY}>
         On primary text
       </Text>
