Heading API changes (#1440)

--- a/src/components/Title/__stories__/Title.stories.mdx
+++ b/src/components/Title/__stories__/Title.stories.mdx
@@ -5,11 +5,10 @@ import { createComponentTemplate } from "vibe-storybook-components";
 import Title from "../Title";
 import { OVERFLOW_TITLE_CONTAINER_ID, ONE_LINE_ELLIPSIS_TEST_ID } from "../__tests__/title-tests-constants";
 import styles from "./Title.stories.module.scss";
-import { titleOverflowSuite } from "../__tests__/title.interactions";
+import { titleOverflowSuite } from "../__tests__/Title.interactions";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: Title,
-  enumPropNamesArray: ["types", "weights", "colors", { propName: "align", enumName: "align" }], // List enum props here
   iconPropNamesArray: [], // List props that are typed as icons here
   actionPropsArray: [] // List the component's actions here
 });
@@ -67,31 +66,31 @@ Title components are used to title any page sections or sub-sections in top-leve
       justify={Flex.justify.START}
       align={Flex.align.START}
     >
-      <Title type="h1" weight="bold">
+      <Title type={Title.types.H1} weight={Title.weights.BOLD}>
         Bold H1 title
       </Title>
-      <Title type="h1" weight="normal">
+      <Title type={Title.types.H1} weight="normal">
         Normal H1 title
       </Title>
-      <Title type="h1" weight="light">
+      <Title type={Title.types.H1} weight={Title.weights.LIGHT}>
         Light H1 title
       </Title>
-      <Title type="h2" weight="bold">
+      <Title type={Title.types.H2} weight={Title.weights.BOLD}>
         Bold H2 title
       </Title>
-      <Title type="h2" weight="normal">
+      <Title type={Title.types.H2} weight={Title.weights.NORMAL}>
         Normal H2 title
       </Title>
-      <Title type="h2" weight="light">
+      <Title type={Title.types.H2} weight={Title.weights.LIGHT}>
         Light H2 title
       </Title>
-      <Title type="h3" weight="bold">
+      <Title type={Title.types.H3} weight={Title.weights.BOLD}>
         Bold H3 title
       </Title>
-      <Title type="h3" weight="normal">
+      <Title type={Title.types.H3} weight={Title.weights.NORMAL}>
         Normal H3 title
       </Title>
-      <Title type="h3" weight="light">
+      <Title type={Title.types.H3} weight={Title.weights.LIGHT}>
         Light H3 title
       </Title>
     </Flex>
@@ -103,12 +102,22 @@ Title components are used to title any page sections or sub-sections in top-leve
 <Canvas>
   <Story name="Colors">
     <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
-      <Title color="primary">Primary title</Title>
-      <Title color="secondary">Secondary title</Title>
-      <Title element="div" className={styles.primaryBackground} align="center" color="onPrimary">
+      <Title color={Title.colors.PRIMARY}>Primary title</Title>
+      <Title color={Title.colors.SECONDARY}>Secondary title</Title>
+      <Title
+        element="div"
+        className={styles.primaryBackground}
+        align={Title.align.CENTER}
+        color={Title.colors.ON_PRIMARY}
+      >
         On primary title
       </Title>
-      <Title element="div" className={styles.invertedBackground} align="center" color="onInverted">
+      <Title
+        element="div"
+        className={styles.invertedBackground}
+        align={Title.align.CENTER}
+        color={Title.colors.ON_INVERTED}
+      >
         On inverted title
       </Title>
     </Flex>
