--- a/src/components/LegacyHeading/__stories__/Heading.stories.mdx
+++ b/src/components/LegacyHeading/__stories__/Heading.stories.mdx
@@ -1,4 +1,4 @@
-import Heading from "../Heading";
+import Heading from "../LegacyHeading";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { Link, createComponentTemplate } from "vibe-storybook-components";
