--- a/src/components/Heading/__stories__/Title.stories.mdx
+++ b/src/components/Heading/__stories__/Title.stories.mdx
@@ -13,13 +13,13 @@ export const metaSettings = createStoryMetaSettingsDecorator({
   actionPropsArray: [] // List the component's actions here
 });
 
-<Meta title="Text/Title" component={Title} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
+<Meta title="Text/Heading" component={Title} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
 export const textTemplate = createComponentTemplate(Title);
 
-# Title
+# Heading
 
 <AlphaWarning />
 
