--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -1,11 +1,16 @@
 import Text from "../Text";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
-import { Link as StorybookLink, createComponentTemplate } from "vibe-storybook-components";
+import { Link, createComponentTemplate } from "vibe-storybook-components";
 import Flex from "../../Flex/Flex";
 import { AlphaWarning } from "../../../storybook/components/alpha-warning/alpha-warning";
 import { ONE_LINE_ELLIPSIS_TEST_ID, OVERFLOW_TEXT_CONTAINER_ID } from "../__tests__/text-tests-constants";
 import { textOverflowSuite } from "../__tests__/text.interactions";
+import {
+  EDITABLE_HEADING,
+  HEADING,
+  LINK
+} from "../../../storybook/components/related-components/component-description-map";
 import styles from "./Text.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
@@ -23,8 +28,6 @@ export const textTemplate = createComponentTemplate(Text);
 
 # Text
 
-<AlphaWarning />
-
 <!--- Component documentation -->
 
 - [Overview](#overview)
@@ -41,10 +44,14 @@ export const textTemplate = createComponentTemplate(Text);
 The text component serves as a wrapper for applying typography styles to the text it contains.
 
 <Canvas>
-  <Story name="Overview" args={{ children: "Text" }}>
+  <Story name="Overview" args={{ children: "Hi, I'm a text!" }}>
     {textTemplate.bind({})}
   </Story>
 </Canvas>
+
+<Tip>
+  Check out our <Link href="/?path=/docs/text-heading--overview">Heading</Link> component for text headlines.
+</Tip>
 
 ## Props
 
@@ -52,13 +59,13 @@ The text component serves as a wrapper for applying typography styles to the tex
 
 ## Usage
 
-<UsageGuidelines guidelines={["Usage guideline 1", "Usage guideline 2", "Usage guideline 3"]} />
-
-<Tip title="Not what you were looking for?">Tip content</Tip>
+<UsageGuidelines guidelines={["Use it to display text formed from a single sentence, or multiple sentences."]} />
 
 ## Variants
 
 ### Sizes and weights
+
+Text component comes in two sizes: text1 (16px) and text2 (14px), and in three weights: bold (700), medium (600) and normal (400)
 
 <Canvas>
   <Story name="Sizes and weights">
@@ -69,28 +76,30 @@ The text component serves as a wrapper for applying typography styles to the tex
       align={Flex.align.START}
     >
       <Text type={Text.types.TEXT1} weight={Text.weights.BOLD}>
-        Text1 with bold weight
+        This is text1 bold
       </Text>
       <Text type={Text.types.TEXT1} weight={Text.weights.MEDIUM}>
-        Text1 with medium weight
+        This is text1 medium
       </Text>
       <Text type={Text.types.TEXT1} weight={Text.weights.NORMAL}>
-        Text1 with normal weight
+        This is text1 normal
       </Text>
       <Text type={Text.types.TEXT2} weight={Text.weights.BOLD}>
-        Text2 with bold weight
+        This is text2 bold
       </Text>
       <Text type={Text.types.TEXT2} weight={Text.weights.MEDIUM}>
-        Text2 with medium weight
+        This is text2 medium
       </Text>
       <Text type={Text.types.TEXT2} weight={Text.weights.NORMAL}>
-        Text2 with normal weight
+        This is text2 normal
       </Text>
     </Flex>
   </Story>
 </Canvas>
 
 ### Colors
+
+Text component comes in four colors: primary, secondary, on-primary and on-inverted
 
 <Canvas>
   <Story name="Colors">
@@ -114,8 +123,10 @@ The text component serves as a wrapper for applying typography styles to the tex
 
 ### Overflow
 
-Our Text component support overflow state.
-When the text is too long and the component includes an ellipsis flag, we will cut the end of the heading and display instead of it "...".
+Our Text component supports overflow state.
+When the text is longer than its container and the ellipsis flag is on, the end of the text will be truncated and will display "..."
+
+<Tip>Ellipsis prop is true by default. If you wish to turn off ellipsis you can change the prop to false.</Tip>
 
 <Canvas>
   <Story name="Overflow" play={textOverflowSuite}>
@@ -153,6 +164,8 @@ When the text is too long and the component includes an ellipsis flag, we will c
   </Story>
 </Canvas>
 
+<Tip>Ellipsis prop is true by default. If you wish to turn off ellipsis you can change the prop to false.</Tip>
+
 ### Paragraph
 
 To use the Text component for a paragraph, utilize the 'paragraph' prop.
@@ -181,19 +194,31 @@ Customize ellipsis behavior using the "ellipsis" prop or override default margin
   </Story>
 </Canvas>
 
-### Links inside running text
+### Links
 
-We distinguish between two types of links: links within running text and links that are not part of the textual flow, such as those found in menus or next to buttons.
-
-If you need to place a link outside of the textual flow, please use our <StorybookLink href="/?path=/docs/navigation-link--overview" withoutSpacing>Link</StorybookLink> component.
-Otherwise, use this Text component with a link skin, as demonstrated in the following example.
+A Text component with a link skin can be used to create a link within running text that redirects to an external webpage, as demonstrated in the following example.
 
 <Canvas>
   <Story name="Links inside running text">
     <Text>
       This is the story of a <a href="/?path=/docs/foundations-typography--page">link</a> inside running text.
     </Text>
+    <Text element="div" className={styles.primaryBackground} align={Text.align.CENTER} color={Text.colors.ON_PRIMARY}>
+      This is the story of a <a href="/?path=/docs/foundations-typography--page">link</a> inside running text on a
+      primary color
+    </Text>
+    <Text element="div" className={styles.invertedBackground} align={Text.align.CENTER} color={Text.colors.ON_INVERTED}>
+      This is the story of a <a href="/?path=/docs/foundations-typography--page">link</a> inside running text on an
+      inverted color
+    </Text>
   </Story>
 </Canvas>
 
+<Tip>
+  If you need to place a link outside of the textual flow, please use our
+  <Link href="/?path=/docs/navigation-link--overview">Link</Link> component.
+</Tip>
+
 ## Related components
+
+<RelatedComponents componentsNames={[HEADING, EDITABLE_HEADING, LINK]} />
