--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -1,32 +1,37 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createStoryMetaSettingsDecorator, Tip, AlphaWarning } from "../../../storybook";
+import { createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import { createComponentTemplate } from "vibe-storybook-components";
-import Title from "../Heading";
+import Heading from "../Heading";
 import { OVERFLOW_TITLE_CONTAINER_ID, ONE_LINE_ELLIPSIS_TEST_ID } from "../__tests__/title-tests-constants";
-import styles from "./Heading.stories.module.scss";
+import { Link } from "vibe-storybook-components";
 import { titleOverflowSuite } from "../__tests__/Title.interactions";
+import Divider from "../../Divider/Divider";
+import Search from "../../Search/Search";
+import Checkbox from "../../Checkbox/Checkbox";
+import Button from "../../Button/Button";
+import { Custom } from "../../Icon/Icons";
+import { emptyStateExample } from "./assets";
+import styles from "./Heading.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
-  component: Title,
+  component: Heading,
   iconPropNamesArray: [], // List props that are typed as icons here
   actionPropsArray: [] // List the component's actions here
 });
 
-<Meta title="Text/Heading" component={Title} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
+<Meta title="Text/Heading" component={Heading} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
-export const textTemplate = createComponentTemplate(Title);
+export const textTemplate = createComponentTemplate(Heading);
 
 # Heading
-
-<AlphaWarning />
 
 <!--- Component documentation -->
 
 - [Overview](#overview)
-- [Import] (#import)
+- [Import](#import)
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
@@ -73,10 +78,10 @@ just like any other component.
 
 <Tip title="Not what you were looking for?">
   Please check out our{" "}
-  <Link href="/?path=/docs/inputs-editableheading--overview" withoutSpacing>
+  <Link href="/?path=/docs/inputs-editableheading--overview" withoutSpacing size={Link.sizes.SMALL}>
     EditableHeading
   </Link>{" "}
-  component if you would like to allow users to edit the title text..
+  component if you would like to allow users to edit the title text.
 </Tip>
 
 ## Variants
@@ -93,33 +98,33 @@ Heading component comes in three types: H1 (32px), H2 (24px), H3 (18px) and thre
       justify={Flex.justify.START}
       align={Flex.align.START}
     >
-      <Title type={Title.types.H1} weight={Title.weights.BOLD}>
+      <Heading type={Heading.types.H1} weight={Heading.weights.BOLD}>
         Bold H1 title
-      </Title>
-      <Title type={Title.types.H1} weight="normal">
+      </Heading>
+      <Heading type={Heading.types.H1} weight="normal">
         Normal H1 title
-      </Title>
-      <Title type={Title.types.H1} weight={Title.weights.LIGHT}>
+      </Heading>
+      <Heading type={Heading.types.H1} weight={Heading.weights.LIGHT}>
         Light H1 title
-      </Title>
-      <Title type={Title.types.H2} weight={Title.weights.BOLD}>
+      </Heading>
+      <Heading type={Heading.types.H2} weight={Heading.weights.BOLD}>
         Bold H2 title
-      </Title>
-      <Title type={Title.types.H2} weight={Title.weights.NORMAL}>
+      </Heading>
+      <Heading type={Heading.types.H2} weight={Heading.weights.NORMAL}>
         Normal H2 title
-      </Title>
-      <Title type={Title.types.H2} weight={Title.weights.LIGHT}>
+      </Heading>
+      <Heading type={Heading.types.H2} weight={Heading.weights.LIGHT}>
         Light H2 title
-      </Title>
-      <Title type={Title.types.H3} weight={Title.weights.BOLD}>
+      </Heading>
+      <Heading type={Heading.types.H3} weight={Heading.weights.BOLD}>
         Bold H3 title
-      </Title>
-      <Title type={Title.types.H3} weight={Title.weights.NORMAL}>
+      </Heading>
+      <Heading type={Heading.types.H3} weight={Heading.weights.NORMAL}>
         Normal H3 title
-      </Title>
-      <Title type={Title.types.H3} weight={Title.weights.LIGHT}>
+      </Heading>
+      <Heading type={Heading.types.H3} weight={Heading.weights.LIGHT}>
         Light H3 title
-      </Title>
+      </Heading>
     </Flex>
   </Story>
 </Canvas>
@@ -131,24 +136,30 @@ Heading component comes in four colors: primary, secondary, on primary, on inver
 <Canvas>
   <Story name="Colors">
     <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
-      <Title color={Title.colors.PRIMARY}>Primary title</Title>
-      <Title color={Title.colors.SECONDARY}>Secondary title</Title>
-      <Title
+      <Heading type={Heading.types.H2} color={Heading.colors.PRIMARY}>
+        Primary title
+      </Heading>
+      <Heading type={Heading.types.H2} type={Heading.types.H2} type={Heading.types.H2} color={Heading.colors.SECONDARY}>
+        Secondary title
+      </Heading>
+      <Heading
         element="div"
+        type={Heading.types.H2}
         className={styles.primaryBackground}
-        align={Title.align.CENTER}
-        color={Title.colors.ON_PRIMARY}
+        align={Heading.align.CENTER}
+        color={Heading.colors.ON_PRIMARY}
       >
         On primary title
-      </Title>
-      <Title
+      </Heading>
+      <Heading
         element="div"
+        type={Heading.types.H2}
         className={styles.invertedBackground}
-        align={Title.align.CENTER}
-        color={Title.colors.ON_INVERTED}
+        align={Heading.align.CENTER}
+        color={Heading.colors.ON_INVERTED}
       >
         On inverted title
-      </Title>
+      </Heading>
     </Flex>
   </Story>
 </Canvas>
@@ -165,13 +176,13 @@ When the text is longer than its container and the ellipsis flag is on, the end 
       direction={Flex.directions.COLUMN}
       gap={Flex.gaps.MEDIUM}
       align={Flex.align.STRETCH}
-      style={{ width: "70%" }}
+      style={{ width: "50%" }}
     >
-      <Title ellipsis={false}>
-        Title without overflow title without overflow title without overflow title without overflow title without
-        overflow title without overflow title without overflow
-      </Title>
-      <Title
+      <Heading type={Heading.types.H2} ellipsis={false}>
+        Heading without overflow
+      </Heading>
+      <Heading
+        type={Heading.types.H2}
         ellipsis
         /**for testing purposes**/
         data-testid={ONE_LINE_ELLIPSIS_TEST_ID}
@@ -179,15 +190,13 @@ When the text is longer than its container and the ellipsis flag is on, the end 
           containerSelector: `#${OVERFLOW_TITLE_CONTAINER_ID}`
         }}
       >
-        Title with overflow title with overflow title with overflow title with overflow title with overflow title with
-        overflow title with overflow title with overflow title with overflow title with overflow
-      </Title>
+        Heading with ellipsis and tooltip when hovering
+      </Heading>
       <div>
-        <Title ellipsis withoutTooltip maxLines={2}>
-          Title with overflow title with overflow title with overflow title with overflow title with overflow title with
-          overflow title with overflow title with overflow title with overflow title with overflow title with overflow
-          title with overflow title with overflow title with overflow title with overflow title with overflow
-        </Title>
+        <Heading type={Heading.types.H2} ellipsis withoutTooltip maxLines={2}>
+          Heading with two lines overflow heading with 2 lines overflow heading with two lines overflow heading with 2
+          lines overflow heading with two lines overflow heading with two lines overflow heading with two lines overflow
+        </Heading>
       </div>
     </Flex>
   </Story>
@@ -199,16 +208,58 @@ When the text is longer than its container and the ellipsis flag is on, the end 
   rules={[
     {
       positive: {
-        component: <Heading value="Hello world" />,
+        component: <Heading>Hello world</Heading>,
         description: "Always capitalize the first letter of the first word in the heading."
       },
       negative: {
-        component: <Heading value="Hello World" />,
+        component: <Heading>Hello World</Heading>,
         description: "Please avoid capitalizing the first letter of each word in the heading."
       }
     }
   ]}
 />
+
+## Use cases and examples
+
+### Built-in page header (not editable)
+
+<Canvas>
+  <Story name="Not editable header of a page">
+    <div style={{ width: "100%" }}>
+      <Heading type={Heading.types.H1} id="my-work-id">
+        My work
+      </Heading>
+      <Divider />
+      <div
+        className={styles["page-header_commands"]}
+        style={{ display: "flex", alignItems: "center" }}
+        aria-labelledby="my-work-id"
+      >
+        <Search wrapperClassName={styles["page-header_search"]} placeholder="Search" />
+        <Checkbox label="Hide done items" checked />
+        <Button leftIcon={Custom} kind={Button.kinds.TERTIARY}>
+          Customize
+        </Button>
+      </div>
+    </div>
+  </Story>
+</Canvas>
+
+### Empty state heading
+
+<Canvas>
+  <Story name="Empty state heading">
+    <div className={styles["empty-state-container"]} aria-labelledby="empty-state-id">
+      <img style={{ width: "290px" }} src={emptyStateExample} alt="" />
+      <Heading type={Heading.types.H2} id="empty-state-id">
+        No updates yet for this item
+      </Heading>
+      <span style={{ width: "50%", textAlign: "center" }}>
+        Be the first one to update about progress, mention someone or upload files to share with your team members
+      </span>
+    </div>
+  </Story>
+</Canvas>
 
 ## Related components
 
