--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -51,7 +51,11 @@ The text component serves as a wrapper for applying typography styles to the tex
 </Canvas>
 
 <Tip>
-  Check out our <Link href="/?path=/docs/text-heading--overview">Heading</Link> component for text headlines.
+  Check out our{" "}
+  <Link href="/?path=/docs/text-heading--overview" size={Link.sizes.SMALL}>
+    Heading
+  </Link>{" "}
+  component for text headlines.
 </Tip>
 
 ## Props
