--- a/src/components/LegacyHeading/__stories__/LegacyHeading.stories.mdx
+++ b/src/components/LegacyHeading/__stories__/LegacyHeading.stories.mdx
@@ -6,6 +6,7 @@ import Divider from "../../Divider/Divider";
 import Search from "../../Search/Search";
 import Checkbox from "../../Checkbox/Checkbox";
 import Button from "../../Button/Button";
+import Flex from "../../Flex/Flex";
 import { Custom } from "../../Icon/Icons";
 import { emptyStateExample } from "./assets";
 import {
@@ -181,17 +182,13 @@ Our heading component support text highlight.
     <div style={{ width: "100%" }}>
       <Heading type={Heading.types.h1} value="My Work" id="my-work-id" />
       <Divider />
-      <div
-        className={styles["page-header_commands"]}
-        style={{ display: "flex", alignItems: "center" }}
-        aria-labelledby="my-work-id"
-      >
+      <Flex align={Flex.align.CENTER} gap={Flex.gap.SMALL} aria-labelledby="my-work-id">
         <Search wrapperClassName={styles["page-header_search"]} placeholder="Search" />
         <Checkbox label="Hide done items" checked />
         <Button leftIcon={Custom} kind={Button.kinds.TERTIARY}>
           Customize
         </Button>
-      </div>
+      </Flex>
     </div>
   </Story>
 </Canvas>
@@ -200,13 +197,13 @@ Our heading component support text highlight.
 
 <Canvas>
   <Story name="Empty state title">
-    <div className={styles["empty-state-container"]} aria-labelledby="empty-state-id">
+    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.SMALL} aria-labelledby="empty-state-id">
       <img style={{ width: "290px" }} src={emptyStateExample} alt="" />
       <Heading type={Heading.types.h2} id="empty-state-id" value="No updates yet for this item" />
       <span style={{ width: "50%", textAlign: "center" }}>
         Be the first one to update about progress, mention someone or upload files to share with your team members
       </span>
-    </div>
+    </Flex>
   </Story>
 </Canvas>
 
