docs: expand-collapse-description.jsx

--- a/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
+++ b/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
@@ -6,7 +6,7 @@ import { Link } from "vibe-storybook-components";
 import {
   ACCORDION,
   DROPDOWN,
-  STEPPER
+  WIZARD
 } from "../../../storybook/components/related-components/component-description-map";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
@@ -92,4 +92,4 @@ ExpandCollapse is a component that allows you to hide and show content.
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[ACCORDION, DROPDOWN, STEPPER]} />
+<RelatedComponentsDecorator componentsNames={[ACCORDION, DROPDOWN, WIZARD]} />
