--- a/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
+++ b/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
@@ -11,9 +11,7 @@ import {
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: ExpandCollapse,
-  enumPropNamesArray: [], // List enum props here
-  iconPropNamesArray: [], // List props that are typed as icons here
-  actionPropsArray: [] // List the component's actions here
+  actionPropsArray: ["onClick"]
 });
 
 <Meta
