--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -36,7 +36,6 @@ export const textTemplate = createComponentTemplate(Text);
 - [Usage](#usage)
 - [Variants](#variants)
 - [Do’s and don’ts](#dos-and-donts)
-- [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
 
@@ -52,7 +51,7 @@ The text component serves as a wrapper for applying typography styles to the tex
 
 <Tip>
   Check out our{" "}
-  <Link href="/?path=/docs/text-heading--overview" size={Link.sizes.SMALL}>
+  <Link href="/?path=/docs/text-heading--overview" size={Link.sizes.SMALL} withoutSpacing>
     Heading
   </Link>{" "}
   component for text headlines.
